k8s/app-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: useless-tools
  namespace: useless-tools
  labels:
    app: useless-tools
spec:
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: useless-tools
  template:
    metadata:
      labels:
        app: useless-tools
    spec:
      containers:
      - name: useless-tools-nginx
        image: harbor.skni.edu.pl/library/ut:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
