k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: useless-tools
  namespace: useless-tools
  labels:
    app: useless-tools
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: useless-tools
  template:
    metadata:
      labels:
        app: useless-tools
    spec:
      containers:
      - name: useless-tools-nginx
        image: harbor.skni.edu.pl/library/ut:imagetag
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
