k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: useless-tools-ingress
  namespace: useless-tools
  annotations:
    kubernetes.io/ingress.class: "nginx" # Change this if you're using a different Ingress controller
spec:
  rules:
  - host: ut.skni.edu.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: useless-tools-service
            port:
              number: 80
